# aws-lite-rs

./: .gitignore  Cargo.toml
.claude/: CLAUDE.md  COVERAGE.md
.claude/docs/: api-doc-template.md  architecture.md  codegen-reference.md  integration-testing-methodology.md  testing-guide.md
codegen/: __init__.py  bootstrap.py  cli.py  extend.py  fetch_models.py  plugin.py  pyproject.toml  reference.py  verify.py
codegen/manifests/: accessanalyzer.toml  apigateway.toml  autoscaling.toml  ce.toml  cloudfront.toml  cloudtrail.toml  cloudwatch.toml  config.toml  dynamodb.toml  ec2.toml  ecr.toml  ecs.toml  efs.toml  eks.toml  elasticache.toml  elbv2.toml  emr.toml  iam.toml  kinesis.toml  kms.toml  lambda.toml  logs.toml  opensearch.toml  organizations.toml  rds.toml  redshift.toml  route53.toml  s3.toml  sagemaker.toml  secretsmanager.toml  securityhub.toml  sts.toml
docs/autoscaling/: api.md  operations.md  usage.md
docs/cloudfront/: api.md  operations.md  usage.md
docs/cloudtrail/: api.md  operations.md  usage.md
docs/config/: api.md  operations.md  usage.md
docs/dynamodb/: api.md  operations.md  usage.md
docs/ecr/: api.md  operations.md  usage.md
docs/ecs/: api.md  operations.md  usage.md
docs/elbv2/: api.md  operations.md  usage.md
docs/iam/: api.md  operations.md  usage.md
docs/kms/: api.md  operations.md  usage.md
docs/lambda/: api.md  operations.md  usage.md
docs/organizations/: api.md  operations.md  usage.md
docs/s3/: api.md  usage.md  (+1 more)
src/: client.rs  error.rs  iam_policy.rs  lib.rs  mock_client.rs  query.rs  serde_base64.rs  xml.rs
(+187 files in other folders)
