[package]
name = "aws-lite-rs"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Lightweight HTTP client for AWS APIs"
repository = "https://github.com/Elsayed91/aws-lite-rs"
documentation = "https://docs.rs/aws-lite-rs"
keywords = ["aws", "cloud", "s3"]
categories = ["api-bindings"]

[dependencies]
cloud-lite-core = { package = "cloud-lite-core-rs", version = "0.1" }
bytes = "1"
reqwest = { version = "0.13", features = ["rustls"], default-features = false }
tokio = { version = "1", features = ["time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.37", features = ["serde", "serialize"] }
thiserror = "2"
tracing = "0.1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
dirs = "6"
urlencoding = "2.1"
async-stream = "0.3"
futures-core = "0.3"
md-5 = "0.10.6"
base64 = "0.22.1"

[features]
test-support = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 0
debug = 0
